--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -13,6 +13,7 @@ itypes==1.2.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 packaging==20.4
+Pillow==8.0.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2020.1
